<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:padding="5dp">
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/description" />
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/send_normal"
	        android:onClick="onSendNormalClick" />
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/send_ordered"
	        android:onClick="onSendOrderedClick" />
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/send_sticky"
	        android:onClick="onSendStickyClick" />
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/send_stickyordered"
	        android:onClick="onSendStickyOrderedClick" />
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/remove_sticky"
	        android:layout_marginTop="10dp"
	        android:onClick="onRemoveStickyClick" />
        <TextView
            android:id="@+id/logview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/logview" />
    </LinearLayout>
</ScrollView>
